added movie-detail page

--- a/movies/templates/movies/includes/navigation.html
+++ b/movies/templates/movies/includes/navigation.html
@@ -1,5 +1,5 @@
 <!-- Navigation-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="#!">IMDB Movies</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
