--- a/movies/templates/movies/includes/card.html
+++ b/movies/templates/movies/includes/card.html
@@ -26,18 +26,18 @@
     <h5 class="card-title"><a href="3">{{ movie.title }}</a>
                     </h5>
     <p class="card-text">{{ movie.released_date }}</p>-->
-    <div class="card border-0" style="width: 100%; height: 100%; background-color: black">
-        <img class="card-img-top" style="border-radius: 5%" src="../../../media/{{ movie.poster }}" alt="Card image cap">
-        <div class="card-body">
+    <div class="card border-0 movie-info-card">
+        <a href="{% url "movie-details" movie.id %}"><img class="card-img-top" style="border-radius: 5%" src="../../../media/{{ movie.poster }}" alt="{{ movie.title }}"></a>
+        <div class="card-body d-flex flex-column">
             <p><i class="bi bi-star" style="color: yellow; fill: yellow"></i><span style="margin-left: 10px; color: white; font-weight: 900">{{ movie.overall_rating }}</span></p>
-            <h7 class="card-text" style="font-weight: 900; color: white">{{ movie.title }}</h7>
-            <p class="card-text" style="color: rgba(0,0,0,0.6); color: white">{{ movie.released_date }}</p>
-            <button class="btn" style="color: #5799EF; background-color: #ffffff14; align-content: center; width: 100%; font-weight: 900">
+            <a href="{% url "movie-details" movie.id %}"><h7 class="card-text movie-title">{{ movie.title }}</h7></a>
+            <p class="card-text movie-release-date" >{{ movie.released_date }}</p>
+            <button class="btn mt-auto watchlist-btn">
                 <i class="bi bi-plus-lg" style="margin-right: 10px"></i>
                 Watchlist
             </button>
-            <button class="btn" style="color: #5799EF; background-color: #ffffff14; align-content: center; width: 100%; font-weight: 900; margin-top: 5px">
-                <i class="bi bi-cart-plus" style="margin-right: 10px; font-weight: bolder"></i>
+            <button class="btn shopping-cart-btn">
+                <i class="bi bi-cart-plus" style="margin-right: 10px;"></i>
                 {{ movie.price }} CAD
             </button>
         </div>
