--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,7 @@
         <!-- Card-Carousel imports  -->
         <link href='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css' rel='stylesheet'>
         <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css' rel='stylesheet'>
-        <style>
-            body{
-                background-color: black;
-            }
-        </style>
+        {% block css_files %}{% endblock %}
         <script type='text/javascript' src=''></script>
         <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
         <script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
