--- a/movies/templates/movies/includes/section.html
+++ b/movies/templates/movies/includes/section.html
@@ -16,12 +16,11 @@
             </div>
             <div class="col-12">
                 <div id="carouselExampleIndicators_0" class="carousel slide" data-ride="carousel">
-
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row">
                                 {% for movie in movies|slice:":6" %}
-                                    {% include 'movies/includes/card.html' with movie=movie %}
+                                    {% include 'movies/includes/card.html' with movie=movie profile=profile%}
                                 {% endfor %}
                             </div>
                         </div>
