--- a/movies/templates/movies/movie-info.html
+++ b/movies/templates/movies/movie-info.html
@@ -7,7 +7,7 @@
 {% block content %}
     <!-- Navigation -->
     {% include 'movies/includes/navigation.html' %}
-
+    {% include 'movies/includes/rating-modal.html' %}
     {% include 'movies/includes/movie-detail.html' %}
 
     <!-- Footer -->
