--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -6,17 +6,17 @@
 {% endblock %}
 {% block content %}
     <!-- Navigation -->
-    {% include 'movies/includes/navigation.html' %}
+    {% include 'movies/includes/navigation.html' with profile=profile %}
     {% include 'movies/includes/header.html' %}
 
     <!-- section 01: Top Trending Shows -->
-    {% include 'movies/includes/section.html' with section_title='Top Movies' movies=top_movies %}
+    {% include 'movies/includes/section.html' with section_title='Top Movies' movies=top_movies profile=profile %}
 
     <!-- section 02: Top Shows In Action -->
-    {% include 'movies/includes/section.html' with section_title='Top Movies In Action' movies=top_action_movies %}
+    {% include 'movies/includes/section.html' with section_title='Top Movies In Action' movies=top_action_movies profile=profile%}
 
     <!-- section 03: Top Shows In Thriller -->
-    {% include 'movies/includes/section.html' with section_title='Top Movies In Thriller' movies=top_thriller_movies %}
+    {% include 'movies/includes/section.html' with section_title='Top Movies In Thriller' movies=top_thriller_movies profile=profile%}
 
     <!-- Footer -->
     {% include 'movies/includes/footer.html' %}
