--- a/movies/templates/movies/movie-info.html
+++ b/movies/templates/movies/movie-info.html
@@ -9,6 +9,7 @@
     {% include 'movies/includes/navigation.html' %}
     {% include 'movies/includes/rating-modal.html' %}
     {% include 'movies/includes/movie-detail.html' %}
+    {% include 'movies/includes/cast.html' %}
 
     <!-- Footer -->
     {% include 'movies/includes/footer.html' %}
