--- a/movies/templates/movies/login.html
+++ b/movies/templates/movies/login.html
@@ -1,11 +1,28 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block page_title %}Login{% endblock %}
+{% block bootstrap %}
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+{% endblock %}
 {% block css_files %}
     <link rel="stylesheet" href="{% static "movies/movies.css" %}">
 {% endblock %}
 {% block content %}
-    <div style="display: flex; justify-content: center; align-items: center; margin: 10em; color: white">
+
+    <div style="display: flex; justify-content: center; align-items: center; color: white; flex-flow: column">
+        {% if forgot_password == True %}
+            <div>
+                <h1 style="color: white; font-weight: 900; margin-top: 100px; margin-bottom: 5px">Your Password has been sent to your email</h1>
+            </div>
+
+        {% endif %}
+        <div>
+            <h1 style="color: white; font-weight: 900; margin-top: 100px; margin-bottom: 5px">Login</h1>
+        </div>
+
         <form action="{% url "auth" %}" method="post">
             {% csrf_token %}
             <!-- Email input -->
@@ -20,17 +37,15 @@
             </div>
             <!-- 2 column grid layout for inline styling -->
             <div class="row mb-4">
-                <div class="col d-flex justify-content-center">
-                    <!-- Checkbox -->
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked/>
-                        <label class="form-check-label" for="form1Example3"> Remember me </label>
-                    </div>
-                </div>
 
-                <div class="col">
+
+                <div class="col d-flex justify-content-center">
                     <!-- Simple link -->
-                    <a href="#!">Forgot password?</a>
+                    <a href="{% url "forgot-password" %}">Forgot password?</a>
+                </div>
+                 <div class="col ">
+                    <!-- Checkbox -->
+                    <a href="{% url "signup" %}">Register Here</a>
                 </div>
             </div>
 
