--- a/movies/templates/movies/sign-up.html
+++ b/movies/templates/movies/sign-up.html
@@ -1,19 +1,55 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block page_title %}Sign-up Page{% endblock %}
+{% block bootstrap %}
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+{% endblock %}
 {% block css_files %}
     <link rel="stylesheet" href="{% static "movies/movies.css" %}">
 {% endblock %}
 {% block content %}
 
-     <div style="color: white; display: flex; justify-content: center; align-items: center; margin: 5em">
-    <form action="{% url "signup" %}" method="post" >
-    {%  csrf_token %}
-    {{ fill_form.as_p }}
-        <button type="submit">Submit</button>
-    </form>
+    <div style="color: white; display: flex; justify-content: center; align-items: center; flex-flow: column">
+        <div>
+            <h1 style="color: white; font-weight: 900; margin-top: 100px; margin-bottom: 5px">Signup</h1>
+        </div>
+        <form class="form-floating needs-validation" action="{% url "signup" %}" method="post" style="color: black">
+            {% csrf_token %}
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingFirstname" name="first_name" required>
+                <label for="floatingFirstname">First name</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingLastname" name="last_name" required>
+                <label for="floatingLastname">Last name</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingUsername" name="username" required>
+                <label for="floatingUsername">Username</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="email" class="form-control" id="floatingEmail" name="email" required>
+                <label for="floatingEmail">Email address</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" name="password" required>
+                <label for="floatingPassword">Password</label>
+            </div>
+            <button class="btn btn-primary" type="submit">Submit</button>
+        </form>
+    {{ form.errors }}
+        {% if form.errors %}
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+        {% endif %}
     </div>
 
-    <!-- Footer -->
-    {% include 'movies/includes/footer.html' %}
 {% endblock %}
