--- a/movies/templates/movies/forgot-password.html
+++ b/movies/templates/movies/forgot-password.html
@@ -7,14 +7,17 @@
 {% block content %}
     <div style="margin-left: 200px; margin-right: 200px">
         <h1 style="color: white; font-weight: 900; margin-top: 100px; margin-bottom: 5px">Forgot Password</h1>
-        <form action="{% url "forgot-password" %}" method="post">
+        <form action="{% url "forgot-password" %}" method="post" style="margin-top: 30px">
             {% csrf_token %}
             <div class="form-group">
-                <label for="exampleInputEmail1">Username</label>
+
                 <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="username"
                        placeholder="Enter username">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            {% if errors == True %}
+                <h6 style="color: red">Enter correct username</h6>
+            {% endif %}
+            <button type="submit" class="btn btn-primary" style="margin-top: 10px">Submit</button>
         </form>
     </div>
 
