--- a/movies/templates/movies/includes/navigation.html
+++ b/movies/templates/movies/includes/navigation.html
@@ -1,14 +1,14 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#!">IMDB Movies</a>
+        <a class="navbar-brand" href="#!"><h5 style="font-weight: 900">OMDb</h5></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <!-- Home Link -->
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url "index" %}">Home</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url "index" %}"><h6>Home</h6></a></li>
                 <!-- My WatchList Link -->
             </ul>
             <!-- Search bar
@@ -30,8 +30,8 @@
             <ul class="nav justify-content-center ml-auto">
                <form class="d-flex" action="{% url "search" %}" method="post">
                    {% csrf_token %}
-                   <input class="form-control me-2" placeholder="Search" name="search" aria-label="Search">
-                   <button class="btn btn-outline-success" type="submit">Search</button>
+                   <input class="form-control me-2" placeholder="Search Movie" name="search" aria-label="Search">
+                   <button class="btn btn-outline-success" type="submit" style="margin-left: 10px"><i class="bi bi-search"></i></button>
                </form>
             </ul>
 
@@ -44,9 +44,9 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
-                                {{ user.first_name }} {{user.last_name}}
+                            <h6 style="font-weight: 900; display: inline"> {{ user.first_name }} {{user.last_name}}</h6>
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown" >
                             <li><a class="dropdown-item" href="{% url 'profile' %}">My Profile</a></li>
                             <li><a class="dropdown-item" href="{% url 'watchlist' %}">Watchlist</a></li>
                             <li><a class="dropdown-item" href="{% url "cart" %}">Shopping Cart</a></li>
@@ -58,8 +58,8 @@
             {% else %}
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4 ml-auto d-flex flex-row">
                     <li class="nav-item"><a class="nav-link"
-                    href="{% if user.is_authenticated %}{% url 'watchlist' %}{% else %}{% url 'signin' %}{% endif %}">
-                    {{ profile.watchlist.all|length }} Watchlist</a></li>
+                    href="{% url 'signup' %}">
+                    Signup</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url "signin" %}">Sign In</a></li>
                 </ul>
 
