--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -10,13 +10,13 @@
     {% include 'movies/includes/header.html' %}
 
     <!-- section 01: Top Trending Shows -->
-    {% include 'movies/includes/section.html' with section_title='Top Movies' movies=top_movies profile=profile %}
+    {% include 'movies/includes/section.html' with section_title='Top Movies' movies=top_movies profile=profile id='top'%}
 
     <!-- section 02: Top Shows In Action -->
-    {% include 'movies/includes/section.html' with section_title='Top Movies In Action' movies=top_action_movies profile=profile%}
+    {% include 'movies/includes/section.html' with section_title='Top Movies In Action' movies=top_action_movies profile=profile id='action'%}
 
     <!-- section 03: Top Shows In Thriller -->
-    {% include 'movies/includes/section.html' with section_title='Top Movies In Thriller' movies=top_thriller_movies profile=profile%}
+    {% include 'movies/includes/section.html' with section_title='Top Movies In Thriller' movies=top_thriller_movies profile=profile id='thriller' %}
 
     <!-- Footer -->
     {% include 'movies/includes/footer.html' %}
