--- a/movies/templates/movies/login.html
+++ b/movies/templates/movies/login.html
@@ -3,9 +3,12 @@
 {% block page_title %}Login{% endblock %}
 {% block bootstrap %}
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 {% endblock %}
 {% block css_files %}
     <link rel="stylesheet" href="{% static "movies/movies.css" %}">
@@ -15,7 +18,8 @@
     <div style="display: flex; justify-content: center; align-items: center; color: white; flex-flow: column">
         {% if forgot_password == True %}
             <div>
-                <h1 style="color: white; font-weight: 900; margin-top: 100px; margin-bottom: 5px">Your Password has been sent to your email</h1>
+                <h1 style="color: white; font-weight: 900; margin-top: 100px; margin-bottom: 5px">Your Password has been
+                    sent to your email</h1>
             </div>
 
         {% endif %}
@@ -35,6 +39,12 @@
                 <label>Password</label>
                 <input type="password" id="form1Example2" name="password" class="form-control" placeholder="password"/>
             </div>
+            {% if errors == True %}
+                <div class="row">
+                    <span style="color: red">Wrong username or password</span>
+                </div>
+
+            {% endif %}
             <!-- 2 column grid layout for inline styling -->
             <div class="row mb-4">
 
@@ -43,7 +53,7 @@
                     <!-- Simple link -->
                     <a href="{% url "forgot-password" %}">Forgot password?</a>
                 </div>
-                 <div class="col ">
+                <div class="col ">
                     <!-- Checkbox -->
                     <a href="{% url "signup" %}">Register Here</a>
                 </div>
@@ -52,6 +62,7 @@
             <!-- Submit button -->
             <button type="submit" class="btn btn-primary btn-block">Sign in</button>
         </form>
+
 
     </div>
 {% endblock %}
