email confirmation added

--- a/movies/templates/movies/change-password.html
+++ b/movies/templates/movies/change-password.html
@@ -1,15 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block page_title %}{{ user }}'s Profile{% endblock %}
-{% block bootstrap %}
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
-{% endblock %}
+
 {% block css_files %}
     <link rel="stylesheet" href="{% static "movies/profile.css" %}">
 {% endblock %}
@@ -18,22 +10,23 @@
     {% include 'movies/includes/navigation.html' %}
     <!-- Footer -->
     <div style="margin-left: 200px; margin-right: 200px">
-        <h1 style="color: white; font-weight: 900; margin-top: 100px; margin-bottom: 5px">Change Password</h1>
+        <h1 style="color: white; font-weight: 900; margin-top: 100px; margin-bottom: 20px">Change Password</h1>
         <form class="form-floating needs-validation" action="{% url "change-password" %}" method="post" style="color: black">
             {% csrf_token %}
             <div class="form-floating mb-3">
+                <label for="floatingEmail" style="color: white">Old Password</label>
                 <input type="password" class="form-control" id="floatingOldPassword" name="oldpassword" required>
-                <label for="floatingEmail">Old Password</label>
+
             </div>
             <div class="form-floating">
+                <label for="floatingPassword" style="color: white">New Password</label>
                 <input type="password" class="form-control" id="floatingNewPassword" name="newpassword" required>
-                <label for="floatingPassword">New Password</label>
+
             </div>
-            <button class="btn btn-primary" type="submit">Submit</button>
+            <button class="btn btn-primary" type="submit" style="margin-top: 10px">Submit</button>
         </form>
         {% if errors == True %}
             <h4 style="color: red">You have entered a wrong old password</h4>
-
         {% endif %}
     </div>
 
