--- a/movies/templates/movies/includes/rating-modal.html
+++ b/movies/templates/movies/includes/rating-modal.html
@@ -21,10 +21,9 @@
                             {% endif %}
                         {% endfor %}
                     </div>
-                    <button type="submit" class="btn btn-primary" style="margin: 20px; width: 100%">Rate</button>
+                    <button type="submit" class="btn btn-primary" style="margin-top: 20px; width: 100%">Rate</button>
                 </form>
             </div>
-
         </div>
     </div>
 </div>
