--- a/movies/templates/movies/login.html
+++ b/movies/templates/movies/login.html
@@ -32,12 +32,12 @@
             <!-- Email input -->
             <div class="form-outline mb-4">
                 <label>Username</label>
-                <input type="text" id="form1Example1" name="username" class="form-control" placeholder="Username"/>
+                <input type="text" id="form1Example1" name="username" class="form-control" placeholder="Username" required/>
             </div>
             <!-- Password input -->
             <div class="form-outline mb-4">
                 <label>Password</label>
-                <input type="password" id="form1Example2" name="password" class="form-control" placeholder="password"/>
+                <input type="password" id="form1Example2" name="password" class="form-control" placeholder="password" required/>
             </div>
             {% if errors == True %}
                 <div class="row">
