--- a/movies/templates/movies/includes/card.html
+++ b/movies/templates/movies/includes/card.html
@@ -46,7 +46,7 @@
             <p><i class="bi bi-star-fill" style="color: yellow; fill: yellow"></i><span style="margin-left: 10px; color: white; font-weight: 900">{{ movie.overall_rating }}</span></p>
             <a href="{% url "movie-details" movie.id %}"><h7 class="card-text movie-title">{{ movie.title }}</h7></a>
             <p class="card-text movie-release-date" >{{ movie.released_date }}</p>
-
+<!--
             {% if movie in profile.cart.all %}
             <a class="btn shopping-cart-btn mt-auto" style="background-color: darkred" href="{% url "remove-cart" movie.id %}">
                 Remove from cart
@@ -56,7 +56,7 @@
                 <i class="bi bi-cart-plus" style="margin-right: 10px;"></i>
                 {{ movie.price }} CAD
             </a>
-            {% endif %}
+            {% endif %} -->
         </div>
     </div>
 </div>
