--- a/movies/templates/movies/includes/cast-detail.html
+++ b/movies/templates/movies/includes/cast-detail.html
@@ -16,9 +16,11 @@ background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0
                     </div>
                 </div>
                 <div class="row">
-                    <ul class="info">
-                        <li><i class="bi bi-calendar-fill" style="color: yellow; fill: yellow"></i>{{ cast.birthday }}</li>
-                    </ul>
+                    <div class="col-md-10">
+                        <h3 class="mt-4" style="color: white">Born</h3>
+                        <p>{{ birthday }}</p>
+                    </div>
+
                 </div>
 
                 <!--<div class="row">
