--- a/movies/templates/movies/watchlist.html
+++ b/movies/templates/movies/watchlist.html
@@ -7,12 +7,20 @@
 {% block content %}
     <!-- Navigation -->
     {% include 'movies/includes/navigation.html' %}
+
     <div style="margin-left: 200px; margin-right: 200px">
         <h1 style="color: white; font-weight: 900; margin-top: 100px; margin-bottom: 5px">{{ name }}'s Watchlist</h1>
+        {% if movies|length != 0 %}
         <h5 style="color: white; font-weight: 500">{{ movies|length }} Titles</h5>
         {% for movie in movies %}
             {% include 'movies/includes/movie-info-card.html' with movie=movie%}
         {% endfor %}
+        {% else %}
+            <div style="color: white; font-weight: 900; height: 400px; width: 100%;">
+                <h3>Your Watchlist is Empty</h3>
+                <h5><a href="{% url 'index' %}">Click here to add some movies</a></h5>
+            </div>
+        {% endif %}
     </div>
 
     <!-- Footer -->
